something worth looking at

--- a/index2.html
+++ b/index2.html
@@ -2,25 +2,19 @@
 <html>
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
 <link rel="stylesheet" type="text/css" href="main.css">
 <meta http-equiv="refresh" content="15">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
 <meta charset="utf-8">
-<title>Bates</title>
+<title>Jeffrey Bates</title>
 </head>
 <body>
-
 <header>
-
 <div id="banner">
 	Jeffrey Bates
 </div>
-	
 	<nav>
-
 		<ul>
-
 			<li>
 				About
 			</li>
@@ -38,35 +32,21 @@
 			</li>
 		</ul>
 	</nav>
-
 </header>
-
 <section>
-	
 	<h2>
 		About
 	</h2>
-	
 	<img src="http://placekitten.com/480/320" class="profilepic" >
-
-
 	<p>
 	Lorem ipsum dolor sit amet, quo ad alii tincidunt, vis veri lorem et. Causae conceptam pertinacia ea cum, tota veniam denique in pri. Cu his quis tamquam, mei dicant albucius invenire ne. Voluptua liberavisse ei sed. Sed ea intellegat intellegebat, id quis falli ius.
-
 	</p>
-
-
 </section>
-
-
 <section>
-
 <h2>
 	Development
 </h2>
-
 <img src="http://placekitten.com/800/100" class = "subimages">
-
 <ul>
 	<li>
 		Javascript
