--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          </article>
     </section> 
 <section id="portfolio">
-            <article>
+<article>
          		<div id="portfolio_controls">
                     <ul>
                     <li id="port_1">
@@ -62,43 +62,46 @@
         <div id="portfolio_elements">
                 <ul>
                     <li id="elem_1">
-                        <img src="http://placekitten.com/400/400">
+                        <img src="/img/concierge_app/logo.png">
                     </li>
                       <li id="elem_2">
-                        <img src="http://placekitten.com/500/600">
+                        <img src="/img/tetra/logo.png">
                     </li>
-                      <li id="elem_3">
-                        <img src="http://placekitten.com/550/480">
+                      
+                    <li id="elem_3">
+                        <img src="/img/story_builder/logo.png">
                     </li>
-                      <li id="elem_4">
-                        <img src="http://placekitten.com/600/600">
+                    <li id="elem_4">
+                        <img src="/img/map_builder/logo.png">
                     </li>
-                     <li id="elem_5">
-                        <img src="http://placekitten.com/700/800">
-                    </li>
+
                 </ul>
 </div>
 
-<div id="portfolio_words">
-    
-Just a line or two.
 
-</div>
-            </article>
+
+</article>
 
 <div id="resume">
-<section>
-    section one
+
+<section id="resume_left">
+
+<h1>resume</h1>
+   
 </section>
 
-<select>
-    section two
-</select>
-</div>
+<section id="resume_right">
+  
+
+
 </section>
+
+</div>
+
 <footer id="contact">
 	Contact
 </footer>
+
 	<script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
 	</body>
