Works, but I hate it.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <script src="/js/jquery-1.11.1.min.js"></script>
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+<!--       <link rel="stylesheet" type="text/css" href="css/normalize.css">
+ -->    <link rel="stylesheet" type="text/css" href="css/responsive.css">
 <!-- <meta http-equiv="refresh" content="5" >   -->
 </head>
 	<body>
@@ -29,8 +29,8 @@
 <section id="about">   
          </div>  
          <article>
-         <div id="myface"> <img src="/img/jeffrey_profile_square.jpg">
-         <div id="welcome">
+<!--          <div id="myface"> <img src="/img/jeffrey_profile_square.jpg">
+ -->         <div id="welcome">
          <h1>Hi, I'm Jeffrey:</h1>
                 <p>
                         A UX designer, and web developer in Seattle, Washington. I'm enamoured by pretty code, intuitive interfaces, and creative collaboration.
@@ -66,17 +66,17 @@
         <div id="portfolio_elements">
                 <ul>
                     <li id="elem_1">
-                        <img src="/img/concierge_app/logo.png">
+                        <h6><a href="concierge.html">DD Concierge</h6>
                     </li>
                       <li id="elem_2">
-                        <img src="/img/tetra/logo.png">
+                        <h6><a href="tetra.html">Tetra</h6>
                     </li>
                       
                     <li id="elem_3">
-                        <img src="/img/map_builder/logo.png">
+                        <h6><a href="mapbuilder.html"> Map Builder</h6>
                     </li>
                     <li id="elem_4">
-                        <img src="/img/character_builder/logo.png">
+                        <h6><a href="charcreate.html">Character Creator</h6>
                
 
 
