--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
 <script src="/js/jquery-1.11.1.min.js"></script>
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--       <link rel="stylesheet" type="text/css" href="css/normalize.css">
- -->    <link rel="stylesheet" type="text/css" href="css/responsive.css">
-<!-- <meta http-equiv="refresh" content="5" >   -->
+	      <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/mobile.css">
+    <link rel="stylesheet" type="text/css" href="css/desktop.css">
+
+ <!-- <meta http-equiv="refresh" content="5" >  
 </head>
 	<body>
 <header>
-	<nav>
+<!-- <div id="menuBar">
+	<div id="nav"> 
 <ul>
 <li>About</li>
 <li>Portfolio</li>
 <li>Resume</li>
 <li>Contact</li>
 </ul>
-</nav>
+</div>
+</div> -->
 
 </header>
 <section id="about">   
          </div>  
          <article>
-<!--          <div id="myface"> <img src="/img/jeffrey_profile_square.jpg">
- -->         <div id="welcome">
+         <div id="myface"> <img src="/img/jeffrey_profile_square.jpg">
+         </div>
+         <div id="welcome">
          <h1>Hi, I'm Jeffrey:</h1>
                 <p>
-                        A UX designer, and web developer in Seattle, Washington. I'm enamoured by pretty code, intuitive interfaces, and creative collaboration.
+                        A UX designer, and web developer in Seattle, Washington.<br> I'm enamoured by pretty code, intuitive interfaces, <br>and creative collaboration.
                 </p>
                 </div>
          </article>
@@ -66,20 +71,18 @@
         <div id="portfolio_elements">
                 <ul>
                     <li id="elem_1">
-                        <h6><a href="concierge.html">DD Concierge</h6>
+                        <a href="https://itunes.apple.com/us/app/deloitte-digital-concierge/id780188228?mt=8">DD Concierge
                     </li>
                       <li id="elem_2">
-                        <h6><a href="tetra.html">Tetra</h6>
+                        <a href="https://vimeo.com/96935981">Tetra
                     </li>
                       
                     <li id="elem_3">
-                        <h6><a href="mapbuilder.html"> Map Builder</h6>
+                        <a href="comingsoon.html"> Map Builder
                     </li>
                     <li id="elem_4">
-                        <h6><a href="charcreate.html">Character Creator</h6>
-               
-
-
+                      <a href="comingsoon.html">Character Creator
+               </a>
 
                 </ul>
 </div>
@@ -166,7 +169,7 @@
 
   <h2>Experience</h2>
 
-<h3>User Experience Designer, Deloitte Digital; Seattle, WA - Jan 2014 - July 2014</h3>
+<h3>User Experience Designer</h3><h4>Deloitte Digital; Seattle, WA Jan 2014 - July 2014</h4>
 <p>
 I designed the user experience for an iPad app called &ldquo;Tetra&rdquo; , which allowed the user to create a &ldquo;flow&rdquo;  of Tableau Software, and QlikView visualizations, and then add his or her own story or commentary as an overlay, in order to share and communicate a trend or story with another end user. I facilitated weekly wireframe reviews with the client, balancing their expectations, and incorporating feedback. 
 <br>
@@ -174,13 +177,13 @@ I also co-designed the user experience for an internal iOS iPhone app called &ld
 </p>
 
 
-<h3>ITS, Deloitte Digital; Seattle, WA - 2012 - 2014</h3>
+<h3>ITS</h3><h4>Deloitte Digital; Seattle, WA 2012 - 2014</h4>
 
 <p>
 I created and managed a mobile device management solution for approximately 300 mobile test devices, as well as providing IT assistance to our Seattle and Denver offices.
 </p>
 
-<h3>Quality Assurance, &Uuml;bermind; Seattle, WA - 2010 - 2012</h3>
+<h3>Quality Assurance</h3><h4>&Uuml;bermind; Seattle, WA 2010 - 2012</h4>
 <p>
 Testing on device, over several platforms. I spent most of my time testing responsive web applications, and iOS apps, over a large array of devices. I focused on writing comprehensive, repeatable steps to reproduce, and user story driven test cases. Our clients included Target, REI, Alaska Airlines, CNN, and Nordstrom.
 </p>
